# my-toolsbox

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel-build.sh  vercel.json
public/: manifest.json  sw.js
rust/: Cargo.toml
rust/pkg/: image_converter.d.ts  image_converter.js  image_converter_bg.wasm  image_converter_bg.wasm.d.ts
rust/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/app/angle/: page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/auth/[...nextauth]/: route.ts
src/app/auth/signin/: page.tsx
src/app/idea-manager/: page.tsx
src/app/image-converter/: page.tsx
src/components/: NextAuthProvider.tsx  StarryBackground.tsx  UserDataForm.tsx  header.tsx
src/components/idea-manager/: idea-form.tsx  idea-list.tsx
src/components/image-converter/: image_converter.cpp  image_converter.js
src/lib/: mongodb.ts
src/lib/image-converter/: image_converter.js  image_converter.wasm
src/pages/api/: user-data.tsx
types/tiff.js/: index.d.ts
