[package]
name = "image-converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
resvg = "0.28.0"
base64 = "0.22.1"
pdf = "0.8.0"
serde_json = "1.0.132"
svg = "0.14"
